fixes bug 221763 "XPTC_InvokeByIndex crashes when cross-compiled under GCC 3.x for target arm-linux" r=timeless sr=shaver